# apb.biixie.com

./: Cargo.toml  Dioxus.toml  LICENSE-MIT  README.md  build.rs  flake.nix  justfile  package.nix  shell.nix
.forgejo/workflows/: deploy.yaml
assets/: main.scss
src/: color.rs  components.rs  main.rs
src/components/: comparison.rs  comparison_applet.rs  footer.rs  header.rs  layout.rs  picker.rs
